--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@emailjs/browser": "^3.6.2",
     "autoprefixer": "^10.4.7",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.1",
+    "firebase": "^9.9.0",
     "framer-motion": "^6.4.3",
     "postcss": "^8.4.14",
     "react-icons": "^4.4.0",
