--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "framer-motion": "^6.4.3",
     "postcss": "^8.4.14",
     "react-icons": "^4.4.0",
+    "react-pdf": "^5.7.2",
+    "react-sizeme": "^3.0.2",
+    "react-to-print": "^2.14.7",
     "tailwindcss": "^3.1.5"
   }
 }
